test: enhance audit log acceptance tests